Simplified front page app

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,6 @@
     	<div class="containergradient project-summary">
 			<header></header>
 			<div class="main">
-				<div ng-show="showMessage" class="message">{{message}}</div>
 				 <div class="homepage">
 					<welcome></welcome>
 					<login></login>
@@ -34,6 +33,7 @@
 
   <script src="lib/angular.min.js"></script>
   <script src="lib/angular-route.min.js"></script>
+  <script src="/lib/angular-resource.min.js"></script>
 
   <script src="app.js"></script>
   <!-- Components -->
