Added new messages component and controllers to scripts

--- a/src/main/webapp/project/index.html
+++ b/src/main/webapp/project/index.html
@@ -35,12 +35,20 @@
   <script src="/lib/angular-route.min.js"></script>
   <script src="/lib/angular-resource.min.js"></script>
   <script src="/lib/angular-growl.min.js"></script>
+  <script src="/lib/angular-messages.min.js"></script>
 	
   <!-- Project App main -->
   <script src="app.js"></script>
   
   <!-- Project Components -->
   <script src="components/projectlist/projectlist.js"></script>
+  <script src="components/projectform/projectform.js"></script>
+  
+  <!-- Controllers -->
+  <script src="controllers/mainController.js"></script>
+  <script src="controllers/editProjectController.js"></script>  
+  <script src="controllers/newProjectController.js"></script>  
+  <script src="controllers/projectController.js"></script>
   
   <!-- General Components -->
   <script src="/components/stats/stats.js"></script>
