Added pagination support

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/buttons.css">
   <link rel="stylesheet" href="style/forms.css">
+  <link rel="stylesheet" href="style/pagination.css">
 </head>
 <body>
 	
@@ -32,6 +33,7 @@
   <script src="/lib/angular-resource.min.js"></script>
   <script src="/lib/angular-growl.min.js"></script>
   <script src="/lib/angular-messages.min.js"></script>
+  <script src="/lib/pagination.js"></script>
 
   <!-- Controllers -->
   <script src="app.js"></script>
