added Edit Member controller to page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,6 +59,7 @@
   <!-- Controllers -->
   <script src="project/controllers/projectsController.js"></script>
   <script src="project/controllers/editProjectController.js"></script>  
+  <script src="project/controllers/editMemberController.js"></script>  
   <script src="project/controllers/newProjectController.js"></script>  
   <script src="project/controllers/projectController.js"></script>
   
