Removed absolute URLs, added controllers for register and verify

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,15 +34,17 @@
 
   <script src="lib/angular.min.js"></script>
   <script src="lib/angular-route.min.js"></script>
-  <script src="/lib/angular-resource.min.js"></script>
-  <script src="/lib/angular-growl.min.js"></script>
-  <script src="/lib/angular-messages.min.js"></script>
-  <script src="/lib/pagination.js"></script>
+  <script src="lib/angular-resource.min.js"></script>
+  <script src="lib/angular-growl.min.js"></script>
+  <script src="lib/angular-messages.min.js"></script>
+  <script src="lib/pagination.js"></script>
 
   <!-- Controllers -->
   <script src="app.js"></script>
   <script src="controllers/searchcontroller.js"></script>	
   <script src="controllers/maincontroller.js"></script>		
+  <script src="controllers/registercontroller.js"></script>		
+  <script src="controllers/verifycontroller.js"></script>		
 	
   <!-- Components -->
   <script src="components/stats/stats.js"></script>
