Added gettext library

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,13 +32,18 @@
 		</div> <!-- div.main closes -->
 	</div> <!-- div.pageContainer closes -->
 
+  <!-- Libraries -->
   <script src="lib/angular.min.js"></script>
-  <script src="lib/angular-route.min.js"></script>
-  <script src="lib/angular-resource.min.js"></script>
-  <script src="lib/angular-growl.min.js"></script>
-  <script src="lib/angular-messages.min.js"></script>
-  <script src="lib/pagination.js"></script>
+  <script src="lib/angular-route.min.js"></script> <!-- Used for SPA -->
+  <script src="lib/angular-resource.min.js"></script> <!-- Used for REST -->
+  <script src="lib/angular-growl.min.js"></script> <!-- Used for user alerts -->
+  <script src="lib/angular-messages.min.js"></script> <!-- Used for form validation -->
+  <script src="lib/angular-gettext.min.js"></script> <!-- Used for i18n -->
+  <script src="lib/pagination.js"></script> <!-- Used for pagination -->
 
+  <!-- Messages -->
+  <script src="translations/en.js"></script>
+  
   <!-- Controllers -->
   <script src="app.js"></script>
   <script src="controllers/searchcontroller.js"></script>	
