Added Audit view

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,6 +69,7 @@
   <script src="project/controllers/editMemberController.js"></script>  
   <script src="project/controllers/newProjectController.js"></script>  
   <script src="project/controllers/projectController.js"></script>
+  <script src="project/controllers/auditController.js"></script>
   
 </body>
 </html>
