Added profile editing

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,6 +50,7 @@
   <script src="controllers/maincontroller.js"></script>		
   <script src="controllers/registercontroller.js"></script>		
   <script src="controllers/verifycontroller.js"></script>		
+  <script src="controllers/profilecontroller.js"></script>		
 	
   <!-- Components -->
   <script src="components/stats/stats.js"></script>
