Added missing dbList controller

--- a/src/main/webapp/project/index.html
+++ b/src/main/webapp/project/index.html
@@ -43,6 +43,7 @@
   <!-- Project Components -->
   <script src="components/projectlist/projectlist.js"></script>
   <script src="components/projectform/projectform.js"></script>
+  <script src="components/dblist/dblist.js"></script>
   
   <!-- Controllers -->
   <script src="controllers/mainController.js"></script>
