--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,6 +64,7 @@
   <!-- Project Components -->
   <script src="project/components/projectlist/projectlist.js"></script>
   <script src="project/components/projectform/projectform.js"></script>
+  <script src="project/components/dblist/dblist.js"></script>
   
   <!-- Controllers -->
   <script src="project/controllers/projectsController.js"></script>
@@ -73,6 +74,10 @@
   <script src="project/controllers/newProjectController.js"></script>  
   <script src="project/controllers/projectController.js"></script>
   <script src="project/controllers/auditController.js"></script>
+  <script src="project/controllers/newDatabaseController.js"></script>
+  
+  <!-- Database Components and Controllers -->
+  <script src="database/controllers/databaseController.js"></script>	  
   
 </body>
 </html>
