Added the database (ordsDB) form and controllers for adding and editing databases

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,6 +78,8 @@
   
   <!-- Database Components and Controllers -->
   <script src="database/controllers/databaseController.js"></script>	  
+  <script src="database/components/databaseform/databaseform.js"></script>	  
+
   
 </body>
 </html>
