Database Explorer Top Level Schema Designer addition of quit

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,5 +92,18 @@
   <script src="schema-designer/controllers/wwwSqlDes/js/wwwsqldesigner.js"></script>
   
   
+  <!-- Database Explorer Controllers -->
+  <script src="database-explorer/controllers/explorerController.js"></script>
+  
+  <!-- Query Builder Controllers -->
+  <script src="query-builder/controllers/queryBuilderController.js"></script>
+  
+  <!-- SQL Query Controllers -->
+  <script src="sql-query/controllers/sqlQueryController.js"></script>
+  
+  <!-- Table View Controllers -->
+  <script src="table-view/controllers/tableViewController.js"></script>
+  
+  
 </body>
 </html>
