--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -95,5 +95,8 @@
   <!-- Database Explorer Controllers -->
   <script src="database-explorer/controllers/explorerController.js"></script>
   
+  <!-- File upload (import) Controllers -->
+  <script src="import/controllers/importController.js"></script>
+  
 </body>
 </html>
