First Draft Table View

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -98,5 +98,8 @@
   <!-- File upload (import) Controllers -->
   <script src="import/controllers/importController.js"></script>
   
+  <!--  Table View Controllers -->
+  <script src="table-view/controllers/tableViewController.js"></script>
+  
 </body>
 </html>
