Added support for logins and signups

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,6 +53,7 @@
   <script src="services.js"></script>
   <script src="controllers/searchcontroller.js"></script>	
   <script src="controllers/maincontroller.js"></script>		
+  <script src="controllers/logincontroller.js"></script>	
   <script src="controllers/registercontroller.js"></script>		
   <script src="controllers/verifycontroller.js"></script>		
   <script src="controllers/profilecontroller.js"></script>	
