Udates to table view

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,6 +37,7 @@
 	</div> <!-- div.pageContainer closes -->
 
   <!-- Libraries -->
+  <script src="lib/jquery-2.2.0.min.js"></script>
   <script src="lib/angular.min.js"></script>
   <script src="lib/angular-route.min.js"></script> <!-- Used for SPA -->
   <script src="lib/angular-resource.min.js"></script> <!-- Used for REST -->
@@ -44,6 +45,7 @@
   <script src="lib/angular-messages.min.js"></script> <!-- Used for form validation -->
   <script src="lib/angular-gettext.min.js"></script> <!-- Used for i18n -->
   <script src="lib/pagination.js"></script> <!-- Used for pagination -->
+  
 
   <!-- Messages -->
   <script src="translations/en.js"></script>
@@ -101,6 +103,7 @@
   
   <!--  Table View Controllers -->
   <script src="table-view/controllers/tableViewController.js"></script>
+  <script src="table-view/row-editor/controllers/rowEditorController.js"></script>
   
 </body>
 </html>
