Updates for managing milestone and test databases

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -98,6 +98,9 @@
   <!-- Database Explorer Controllers -->
   <script src="database-explorer/controllers/explorerController.js"></script>
   
+  <!-- SQL Query Controllers -->
+  <script src="sql-query/controllers/sqlQueryController.js"></script>
+  
   <!-- File upload (import) Controllers -->
   <script src="import/controllers/importController.js"></script>
   
