Updates for table view

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,11 +11,12 @@
   <title>Welcome to ORDS</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="stylesheet" href="style/buttons.css">
-  <link rel="stylesheet" href="style/forms.css">
-  <link rel="stylesheet" href="style/alert.css">
-  <link rel="stylesheet" href="style/pagination.css">
+  <link rel="stylesheet" href="style/style.css"/>
+  <link rel="stylesheet" href="style/buttons.css"/>
+  <link rel="stylesheet" href="style/forms.css"/>
+  <link rel="stylesheet" href="style/alert.css"/>
+  <link rel="stylesheet" href="style/pagination.css"/>
+  <link rel="stylesheet" href="style/select2.css"/>
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/style.css" media="all" />     
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/print.css" media="print" />
 </head>
@@ -38,6 +39,7 @@
 
   <!-- Libraries -->
   <script src="lib/jquery-2.2.0.min.js"></script>
+  <script src="lib/select2.min.js"></script>
   <script src="lib/angular.min.js"></script>
   <script src="lib/angular-route.min.js"></script> <!-- Used for SPA -->
   <script src="lib/angular-resource.min.js"></script> <!-- Used for REST -->
@@ -45,7 +47,6 @@
   <script src="lib/angular-messages.min.js"></script> <!-- Used for form validation -->
   <script src="lib/angular-gettext.min.js"></script> <!-- Used for i18n -->
   <script src="lib/pagination.js"></script> <!-- Used for pagination -->
-  
 
   <!-- Messages -->
   <script src="translations/en.js"></script>
