lots of appearance tweaks and improvements

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,11 +22,11 @@
 </head>
 <body>
 	
+  <header></header>
 	<div class="pageContainer">
     	<div class="containergradient project-summary">
-			<header></header>
 			<div class="alerts">
-				<div growl inline="true" limit-messages="1"></div>
+				<div growl limit-messages="3"></div>
 			</div>
 			<div class="main">
 				<div ng-view autoscroll="true"></div>
