--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,6 +108,7 @@
   
   <!--  Table View Controllers -->
   <script src="table-view/controllers/tableViewController.js"></script>
+  <script src="table-view/components/addrow/addrow.js"></script>
   <script src="table-view/row-editor/controllers/rowEditorController.js"></script>
   
 </body>
