--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="style/alert.css"/>
   <link rel="stylesheet" href="style/pagination.css"/>
   <link rel="stylesheet" href="style/select2.css"/>
+  <link rel="stylesheet" href="style/ngDialog.css"/>
+  <link rel="stylesheet" href="style/ngDialog-theme-ords.css"/>
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/style.css" media="all" />     
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/print.css" media="print" />
 </head>
@@ -47,6 +49,7 @@
   <script src="lib/angular-messages.min.js"></script> <!-- Used for form validation -->
   <script src="lib/angular-gettext.min.js"></script> <!-- Used for i18n -->
   <script src="lib/pagination.js"></script> <!-- Used for pagination -->
+  <script src="lib/ngDialog.min.js"></script>
 
   <!-- Messages -->
   <script src="translations/en.js"></script>
@@ -113,6 +116,9 @@
   <!--  Table View Controllers -->
   <script src="table-view/controllers/tableViewController.js"></script>
   <script src="table-view/components/addrow/addrow.js"></script>
+  
+  <!--  Dataset Dialog Controller -->
+  <script src="datasets/dataset-dialog/datasetDialogController.js"></script>
   
 </body>
 </html>
