--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,6 +50,7 @@
   <script src="lib/angular-gettext.min.js"></script> <!-- Used for i18n -->
   <script src="lib/pagination.js"></script> <!-- Used for pagination -->
   <script src="lib/ngDialog.min.js"></script>
+  <script src="lib/ng-text-truncate.js"></script>
 
   <!-- Messages -->
   <script src="translations/en.js"></script>
@@ -106,6 +107,8 @@
   <!-- Visual query editor -->
   <script src="database-explorer/components/vqd/jquery.jsPlumb-2.1.7-min.js" type="text/javascript"></script>
   <script src="database-explorer/components/vqd/vqd.js" type="text/javascript"></script>
+  
+  <script src="database-explorer/components/apidialog/apidialog.js" type="text/javascript"></script>
   
   <!-- SQL Query Controllers -->
   <script src="sql-query/controllers/sqlQueryController.js"></script>
