Added export dialog box

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,7 @@
   <script src="lib/pagination.js"></script> <!-- Used for pagination -->
   <script src="lib/ngDialog.min.js"></script>
   <script src="lib/ng-text-truncate.js"></script>
+  <script src="lib/angular-file-saver.bundle.js"></script>
 
   <!-- Messages -->
   <script src="translations/en.js"></script>
@@ -122,6 +123,11 @@
   
   <!--  Dataset Dialog Controller -->
   <script src="datasets/dataset-dialog/datasetDialogController.js"></script>
+  
+  
+  <!-- Export Dialog Controller -->
+  <script src="database/components/export-dialog/exportDialogController.js"></script>
+  
   
 </body>
 </html>
