--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,6 +41,7 @@
 
   <!-- Libraries -->
   <script src="lib/jquery-2.2.0.min.js"></script>
+  <script src="lib/colResizable-1.6.min.js"></script>
   <script src="lib/select2.min.js"></script>
   <script src="lib/angular.min.js"></script>
   <script src="lib/angular-route.min.js"></script> <!-- Used for SPA -->
