--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -110,6 +110,7 @@
   <script src="database-explorer/components/vqd/jquery.jsPlumb-2.1.7-min.js" type="text/javascript"></script>
   <script src="database-explorer/components/vqd/vqd.js" type="text/javascript"></script>
   
+  <!-- API dialog box -->
   <script src="database-explorer/components/apidialog/apidialog.js" type="text/javascript"></script>
   
   <!-- SQL Query Controllers -->
@@ -121,6 +122,13 @@
   <!--  Table View Controllers -->
   <script src="table-view/controllers/tableViewController.js"></script>
   <script src="table-view/components/addrow/addrow.js"></script>
+
+  <!-- Filter -->
+  <link rel="stylesheet" href="table-view/components/filter/RedQueryBuilder/gwt/dark/dark.css" type="text/css" />
+  <script src="table-view/components/filter/RedQueryBuilder/RedQueryBuilder.nocache.js"></script>
+  <script src="table-view/components/filter/RedQueryBuilder/RedQueryBuilderFactory.nocache.js"></script>
+  <script src="table-view/components/filter/filter.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="table-view/components/filter/filter.css"/>
   
   <!--  Dataset Dialog Controller -->
   <script src="datasets/dataset-dialog/datasetDialogController.js"></script>
