major overhaul of the UI

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,11 +11,9 @@
   <title>Welcome to ORDS</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style/style.css"/>
-  <link rel="stylesheet" href="style/buttons.css"/>
-  <link rel="stylesheet" href="style/forms.css"/>
-  <link rel="stylesheet" href="style/alert.css"/>
-  <link rel="stylesheet" href="style/pagination.css"/>
+  <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="style/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+  <link rel="stylesheet" href="style/pe-icon-7-stroke/css/helper.css">
   <link rel="stylesheet" href="style/select2.css"/>
   <link rel="stylesheet" href="style/ngDialog.css"/>
   <link rel="stylesheet" href="style/ngDialog-theme-ords.css"/>
