--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,6 @@
   <link rel="stylesheet" href="style/pe-icon-7-stroke/css/helper.css">
   <link rel="stylesheet" href="style/select2.css"/>
   <link rel="stylesheet" href="style/ngDialog.css"/>
-  <link rel="stylesheet" href="style/ngDialog-theme-ords.css"/>
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/style.css" media="all" />     
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/print.css" media="print" />
 </head>
@@ -67,6 +66,7 @@
   <script src="lib/ngDialog.min.js"></script>
   <script src="lib/ng-text-truncate.js"></script>
   <script src="lib/angular-file-saver.bundle.js"></script>
+  <script src="lib/recline.js"></script>
 
   <!-- Messages -->
   <script src="translations/en.js"></script>
