use a nicer dialog for handling really-click confirmations

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -90,6 +90,7 @@
   <script src="components/profile/profile.js"></script>
   <script src="components/header/header.js"></script>
   <script src="components/footer/footer.js"></script>
+  <script src="components/confirmdialog/confirmdialog.js"></script>
   
   <!-- Project Components -->
   <script src="project/components/projectlist/projectlist.js"></script>
