Changed file upload to a central service.  Added csv import for existing databases.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -133,7 +133,7 @@
   
   <!-- File upload (import) Controllers -->
   <script src="import/controllers/importController.js"></script>
-  
+    
   <!--  Table View Controllers -->
   <script src="table-view/controllers/tableViewController.js"></script>
   <script src="table-view/components/addrow/addrow.js"></script>
@@ -151,6 +151,9 @@
   
   <!-- Export Dialog Controller -->
   <script src="database/components/export-dialog/exportDialogController.js"></script>
+  
+  <!-- Import CSV Dialog Controller -->
+    <script src="database/components/import-dialog/importDialogController.js"></script>
   
   
 </body>
