--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,8 @@
   <link rel="stylesheet" href="style/pe-icon-7-stroke/css/helper.css">
   <link rel="stylesheet" href="style/select2.css"/>
   <link rel="stylesheet" href="style/ngDialog.css"/>
+  <link rel="stylesheet" href="style/progress.css"/>
+  <!-- <link rel="stylesheet" href="style/bootstrap.min.css"/> -->
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/style.css" media="all" />     
   <link rel="stylesheet" type="text/css" href="schema-designer/controllers/wwwSqlDes/styles/print.css" media="print" />
 </head>
@@ -67,6 +69,11 @@
   <script src="lib/ngDialog.min.js"></script>
   <script src="lib/ng-text-truncate.js"></script>
   <script src="lib/angular-file-saver.bundle.js"></script>
+  <script src="lib/sprintf.min.js"></script>
+  <script src="lib/angular-sprintf.min.js"></script>
+  <!-- <script src="lib/ui-bootstrap-custom-tpls-2.5.0.min.js"></script>
+  <script src="lib/angular-sanitize.min.js"></script>
+  <script src="lib/angular-animate.min.js"></script> -->
 
   <!-- Messages -->
   <script src="translations/en.js"></script>
